SEO: Add meta tags, sitemap, robots.txt, schema markup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,45 @@
   <meta name="twitter:title" content="Chugach Listings - Valdez, Cordova &amp; Prince William Sound Marketplace">
   <meta property="og:description" content="The Chugach region&#39;s premier private listings marketplace for vehicles, boats, real estate, land, fishing equipment, and guide services. Serving Valdez, Cordova, and Prince William Sound. Post your listing for just $10—no commissions, no middleman.">
   <meta name="twitter:description" content="The Chugach region&#39;s premier private listings marketplace for vehicles, boats, real estate, land, fishing equipment, and guide services. Serving Valdez, Cordova, and Prince William Sound. Post your listing for just $10—no commissions, no middleman.">
-</head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Chugachlistings",
+  "description": "Business website for chugachlistings.com",
+  "url": "https://chugachlistings.com",
+  "logo": "https://chugachlistings.com/logo.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "1577 C St. Ste. 105, #443268",
+    "addressLocality": "Anchorage",
+    "addressRegion": "AK",
+    "postalCode": "99501",
+    "addressCountry": "US"
+  },
+  "foundingDate": "2025-11-24",
+  "sameAs": [
+    "https://github.com/alaskacg"
+  ]
+}
+</script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Chugachlistings",
+  "url": "https://chugachlistings.com",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://chugachlistings.com/search?q={search_term_string}"
+    },
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+  </head>
 
   <body>
     <div id="root"></div>
