--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <!-- Google Analytics GA4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLACEHOLDER"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PLACEHOLDER');
+    </script>
     <title>Chugach Listings - Valdez, Cordova &amp; Prince William Sound Marketplace</title>
     <meta name="description" content="The Chugach region&#39;s premier private listings marketplace for vehicles, boats, real estate, land, fishing equipment, and guide services. Serving Valdez, Cordova, and Prince William Sound. Post your listing for just $10—no commissions, no middleman.">
     <meta name="keywords" content="Chugach classifieds, Valdez marketplace, Cordova listings, Prince William Sound, Alaska boats, fishing boats, commercial fishing, Alaska real estate, Valdez listings, Cordova boats, PWS Alaska">
