--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <!-- Google Analytics GA4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLACEHOLDER"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W7F3XLEFTP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-PLACEHOLDER');
+      gtag('config', 'G-W7F3XLEFTP');
     </script>
     <title>Chugach Listings - Valdez, Cordova &amp; Prince William Sound Marketplace</title>
     <meta name="description" content="The Chugach region&#39;s premier private listings marketplace for vehicles, boats, real estate, land, fishing equipment, and guide services. Serving Valdez, Cordova, and Prince William Sound. Post your listing for just $10—no commissions, no middleman.">
